test/libsolidity/syntaxTests/constructor/constructor_no_visibility.sol
contract A { constructor() {} }
// ----
// SyntaxError: (13-29): No visibility specified. Did you intend to add "public"?
